# docs/swagger.yaml
@@ -71,6 +71,13 @@ definitions:
       content:
         type: string
     type: object
+  model.OpenAIImagesGenerationDataResponse:
+    properties:
+      b64_json:
+        type: string
+      url:
+        type: string
+    type: object
   model.OpenAIImagesGenerationRequest:
     properties:
       channelId:
@@ -78,6 +85,8 @@ definitions:
       model:
         type: string
       prompt:
+        type: string
+      response_format:
         type: string
     type: object
   model.OpenAIImagesGenerationResponse:
@@ -88,10 +97,7 @@ definitions:
         type: boolean
       data:
         items:
-          properties:
-            url:
-              type: string
-          type: object
+          $ref: '#/definitions/model.OpenAIImagesGenerationDataResponse'
         type: array
     type: object
   model.OpenAIMessage:
